log
Wed 08 May 2024 06:15:52 PM UTC: 
 tests:  1|8
total_score: 0/70
0a2110f
Wed 08 May 2024 06:18:28 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
059459b
Wed 08 May 2024 06:26:37 PM UTC: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  5|7
total_score: 5/70
20a60c0
Wed 08 May 2024 07:25:24 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
79a584c
Wed 08 May 2024 07:26:40 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
2e91462
Wed 08 May 2024 11:59:30 PM UTC: 
 treemap.c | 35 ++++++++++++-----------------------
 1 file changed, 12 insertions(+), 23 deletions(-)
 tests:  4|7
total_score: 5/70
ac452b4
Thu 09 May 2024 12:05:10 AM UTC: 
 treemap.c | 49 ++++++++++++++++++++++---------------------------
 1 file changed, 22 insertions(+), 27 deletions(-)
 tests:  11|6
total_score: 15/70
c046394
Thu 09 May 2024 12:19:08 AM UTC: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:102:1: error: expected expression before ‘}’ token
  102 | }
      | ^
treemap.c:100:15: error: unused variable ‘parent’ [-Werror=unused-variable]
  100 |     TreeNode* parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0d94107
Thu 09 May 2024 12:19:34 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
fa256cf
Thu 09 May 2024 12:19:49 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
fcb557b
Thu 09 May 2024 12:20:04 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
5117da0
Thu 09 May 2024 12:21:10 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
b851df1
Thu 09 May 2024 12:21:56 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
1f73c47
Thu 09 May 2024 12:23:02 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
91f259a
Thu 09 May 2024 12:52:59 AM UTC: 
 treemap.c | 46 +++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 45 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
58ce1da
Thu 09 May 2024 01:11:44 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  16|4
total_score: 30/70
0865251
Thu 09 May 2024 01:16:25 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
a39cd80
Thu 09 May 2024 01:25:27 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
c82f56b
Thu 09 May 2024 01:27:59 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  20|2
total_score: 45/70
80fdd5a
Thu 09 May 2024 01:31:24 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  22|2
total_score: 50/70
ef59e87
Thu 09 May 2024 01:35:08 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:227:19: error: unused variable ‘temp’ [-Werror=unused-variable]
  227 |         TreeNode* temp = tree->current;
      |                   ^~~~
cc1: all warnings being treated as errors
Compilation failed
2edec75
Thu 09 May 2024 05:31:38 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:227:19: error: unused variable ‘temp’ [-Werror=unused-variable]
  227 |         TreeNode* temp = tree->current;
      |                   ^~~~
treemap.c:230:1: error: control reaches end of non-void function [-Werror=return-type]
  230 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d50fe52
Thu 09 May 2024 05:32:38 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 50/70
22f05a8
Thu 09 May 2024 05:33:41 PM UTC: 
 treemap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  25|1
total_score: 60/70
042e9bc
Thu 09 May 2024 05:34:15 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  22|2
total_score: 50/70
db9cd65
Thu 09 May 2024 07:52:49 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  25|1
total_score: 60/70
2e8e3f4
Fri 10 May 2024 12:44:06 AM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  25|1
total_score: 60/70
3dbf6cc
